fix word wrapping in flash messages in firefox

--- a/frontend/app/less/flash.less
+++ b/frontend/app/less/flash.less
@@ -33,7 +33,8 @@
     padding: 19px 30px;
     padding-left: 16px;
     text-align: left;
-    word-break: break-word;
+    word-break: initial;
+    word-wrap: break-word;
   }
 
   .flash-close {
